--- a/ERP-DOM/erp/css/estilo.css
+++ b/ERP-DOM/erp/css/estilo.css
@@ -12,4 +12,7 @@ header h1{
     font-size:6rem;
 	box-shadow: 0px 0px 80px 5px rgb(0, 0, 0);
 }
-
+footer{
+    background-color: black;
+    height: 30px;
+}
